--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,4 @@ recursive-include tests/TESTDATA *
 recursive-include docs *.gitkeep
 recursive-include docs *.py
 recursive-include docs *.rst
+recursive-include docs/_static *
