added templates to the distribution

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include *.in
 include *.rst
+recursive-include sciafeed/templates *
 recursive-include tests/TESTDATA *
 recursive-include docs *.gitkeep
 recursive-include docs *.py
